--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,9 @@
           <button type="submit">Search</button>
         </form>
       </div>
-      <div class="loader"></div>
+      <div class="container">
+        <div class="loader"></div>
+      </div>
       <div id="gallery" class="gallery"></div>
       <div class="container">
         <button id="load-more">Load more</button>
